--- a/app/views/pictures/_pictures.html.erb
+++ b/app/views/pictures/_pictures.html.erb
@@ -1,3 +1,4 @@
+<% prefix = prefix %>
 <% pictures.in_groups_of(3) do |group| %>
   <div class="row">
     <% group.compact.each do |picture| %>
@@ -8,6 +9,11 @@
           <%= image_tag '/no_image_thumb.jpg', class: "img-fluid" %>
         <% end %>
         <h4><%= link_to picture.title, picture %></h4>
+        <% if logged_in? %>
+          <div class="mb-2">
+            <%= render 'favorites/favorite_button', picture: picture, prefix: prefix %>
+          </div>
+        <% end %>
         <% if current_user&.admin? %>
           <%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-outline-danger mb-3" %>
         <% end %>
