--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,3 +1,3 @@
 <h1>pictures</h1>
 
-<%= render 'pictures/pictures', pictures: @pictures %>
+<%= render 'pictures/pictures', pictures: @pictures, prefix: 'picture' %>
