--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -15,6 +15,7 @@
         <%= link_to 'Destroy', @picture, data: { confirm: 'Are you sure?' }, method: :delete, class: "btn btn-danger" %>
       <% end %>
       <%= link_to 'Back', root_url, class: "btn btn-primary" %>
+      <%= link_to '投稿者ページ', @picture.user, class: "btn btn-success" %>
     </div>
   </div>
 
